# MWC-brute-force

./: .gitignore  README.md
MWC_BF/: CMakeLists.txt  CMakePresets.json  CMakePresets.json.test  bash_execute.bash  bash_execute2.bash  gmon.out
MWC_BF/data/result/: 1_seed_36_1689098032.txt.txt  1_seed_36_1689098033.txt.txt  1_seed_36_1689098036.txt.txt  1_seed_36_1689098038.txt.txt  1_seed_36_1689098039.txt.txt  1_seed_36_1689098041.txt.txt  25_12_13__seed_seed-7.csv_result_25_1689028123p.txt  25_12_13__seed_seed-8.csv_result_25_1689028124p.txt  25_13_12__seed_seed-1689023987.csv_result_25_1689028125p.txt  25_13_12__seed_seed-1689023990.csv_result_25_1689028125p.txt  25_13_12__seed_seed-1689023993.csv_result_25_1689028126p.txt  36_18_18__seed_seed-1689092203.csv_result_36_1689093322p.txt  36_18_18__seed_seed-1689092203.csv_result_36_1689095615p.txt  36_19_17__seed_seed-1689092793.csv_result_36_1689096666p.txt  36_19_17__seed_seed-1689092796.csv_result_36_1689097623p.txt  40_20_20__seed_seed-1689023890.csv_result_40_1689055877p.txt  40_21_19__seed_seed-1689023778.csv_result_40_1689071285p.txt  result_40.txt
MWC_BF/data/result/25/: 25_12_13__seed_seed-7.csv_result_25_1689026568p.txt  25_12_13__seed_seed-8.csv_result_25_1689026568p.txt  25_13_12__seed_seed-1689023987.csv_result_25_1689026569p.txt  25_13_12__seed_seed-1689023990.csv_result_25_1689026570p.txt  25_13_12__seed_seed-1689023993.csv_result_25_1689026571p.txt  25_13_12__seed_seed-1689023996.csv_result_25_1689026572p.txt  25_13_12__seed_seed-1689023999.csv_result_25_1689026572p.txt  25_13_12__seed_seed-1689024001.csv_result_25_1689026573p.txt  25_13_12__seed_seed-1689024004.csv_result_25_1689026574p.txt  25_13_12__seed_seed-1689024007.csv_result_25_1689026574p.txt
MWC_BF/data/test/: Dataset_25_12_13_seed-7.csv  points_100.txt  points_40.txt
MWC_BF/include/: Coalition.cuh  Dataset.cuh  brute_force_algorithm.h  kernel.cuh
MWC_BF/src/: Coalition.cu  Dataset.cu  brute_force_algorithm.cpp  brute_force_algorithm.h  kernel.cu  main.cu
(+43 files in other folders)
